# notebook

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
docs/: index.md
docs/python/: concurrency.md  custom-json.md  decorators.md  exceptions.md  files.md  functions.md  iterator.md  iterators.md  logging.md  oop.md  pickling.md  profiling.md  references.md  testing.md
docs/python/testing/: coverage.md  introduction.md  tox.md
docs/python/testing/pytest/: fixtures.md  markers.md  parametrization.md  plugins.md  tests.md
python/concurrency/: index.html
python/custom-json/: index.html
python/decorators/: index.html
python/exceptions/: index.html
python/files/: index.html
python/functions/: index.html
python/iterators/: index.html
python/logging/: index.html
python/oop/: index.html
python/pickling/: index.html
python/profiling/: index.html
python/references/: index.html
python/testing/coverage/: index.html
python/testing/introduction/: index.html
python/testing/pytest/fixtures/: index.html
python/testing/pytest/markers/: index.html
python/testing/pytest/parametrization/: index.html
python/testing/pytest/plugins/: index.html
python/testing/pytest/tests/: index.html
python/testing/tox/: index.html
search/: search_index.json
