[tool.poetry]
name = "notebook"
version = "0.1.0"
description = "Jinay Shah's notebook"
authors = ["Jinay Shah <jinayshah86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-material = "^9.1.18"
mkdocs-minify-plugin = "^0.6.4"
fontawesome-markdown = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
